-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.9.0 Beta3
-
None
-
3d058c5ca (6.9), 4ab446203 (dev), 7b31f75cc (6.8), e72a3a24b (tqtc/lts-6.8)
/home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:288: (qdoc) warning: Invalid QML property type: QStringList /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:205: (qdoc) warning: Invalid QML property type: QString /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:351: (qdoc) warning: Invalid QML property type: QVariantList /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:288: (qdoc) warning: Invalid QML property type: QStringList /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:205: (qdoc) warning: Invalid QML property type: QString /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:351: (qdoc) warning: Invalid QML property type: QVariantList /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:288: (qdoc) warning: Invalid QML property type: QStringList /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:205: (qdoc) warning: Invalid QML property type: QString /home/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifabstractzonedfeature.cpp:351: (qdoc) warning: Invalid QML property type: QVariantList QDoc: error: Documentation warnings (9) exceeded the limit (0) for 'QtInterfaceFramework'.
Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1740067886
Tested changes (refs/builds/qtci/6.9/1740062526):
https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/626032/2 Update dependencies on '6.9' in qt/qtinterfaceframework
For Gerrit Dashboard: QTBUG-133958 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
626194,4 | doc: Update QML property types to use QML value types | 6.9 | qt/qtinterfaceframework | Status: MERGED | +2 | 0 |
626267,2 | doc: Update QML property types to use QML value types | dev | qt/qtinterfaceframework | Status: MERGED | +2 | 0 |
628054,2 | doc: Update QML property types to use QML value types | 6.8 | qt/qtinterfaceframework | Status: MERGED | +2 | 0 |
630558,2 | doc: Update QML property types to use QML value types | tqtc/lts-6.8 | qt/tqtc-qtinterfaceframework | Status: MERGED | +2 | 0 |