doc: Update QML property types to use QML value types

Fixed warnings from QDoc about invalid types

Change-Id: Ia3cdfcdb5ef27c18dcf35b2a4e7dc4137a091195
Fixes: QTBUG-133958
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 3d058c5ca56dcb008aa6a57ad05f0ef94b35bcdb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>